--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
+    "axios": "^0.24.0",
     "bulma": "^0.9.3",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
