--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
+    "apexcharts": "^3.32.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "boxicons": "^2.1.1",
