--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,12 +26,14 @@
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.0.4",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.2"
@@ -60,5 +62,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:8080/"
+  "proxy": "http://localhost:8080/",
+  "devDependencies": {
+    "@types/styled-components": "^5.1.20"
+  }
 }
