--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,8 +30,10 @@
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.0.4",
+    "react-content-loader": "^6.1.0",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
