--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,7 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.14",
-    "@types/react": "^17.0.37",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
@@ -27,12 +27,12 @@
     "bootstrap": "^5.1.3",
     "boxicons": "^2.1.1",
     "bulma": "^0.9.3",
-    "react": "^17.0.2",
+    "react": "^18.0.0-rc.0-next-27b569969-20220211",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.0.4",
     "react-content-loader": "^6.1.0",
     "react-datepicker": "^4.6.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.0.0-rc.0-next-27b569969-20220211",
     "react-loading": "^2.0.3",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
