--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-bootstrap": "^2.0.4",
     "react-datepicker": "^4.6.0",
     "react-dom": "^17.0.2",
+    "react-loading": "^2.0.3",
     "react-query": "^3.34.16",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
