--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -20,7 +20,7 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "downlevelIteration": true,
-    "types": ["react/next", "react-dom/next"]
+    "types": ["react/next", "react-dom/next"],
   },
   "include": [
     "src"
