--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,8 @@
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.2"
+    "web-vitals": "^2.1.2",
+    "zustand": "^3.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
