--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,20 +36,21 @@
     "react-query": "^3.34.16",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.2",
-    "zustand": "^3.7.1"
+    "zustand": "^3.7.1",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "vite-plugin-svgr": "^0.3.0",
+    "vite": "^2.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "tsc && vite build",
+    "serve": "vite preview"
   },
   "eslintConfig": {
     "extends": [
