--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,8 @@
     "@types/react-dom": "^17.0.11",
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "^5.3.2",
+    "@vitejs/plugin-react": "^1.3.2",
+    "@vitejs/plugin-react-refresh": "^1.3.1",
     "apexcharts": "^3.32.1",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
@@ -41,11 +43,10 @@
     "redux-thunk": "^2.4.1",
     "typescript": "^4.5.4",
     "universal-cookie": "^4.0.4",
-    "web-vitals": "^2.1.2",
-    "zustand": "^3.7.1",
-    "@vitejs/plugin-react-refresh": "^1.3.1",
+    "vite": "^2.3.2",
     "vite-plugin-svgr": "^0.3.0",
-    "vite": "^2.3.2"
+    "web-vitals": "^2.1.2",
+    "zustand": "^3.7.1"
   },
   "scripts": {
     "start": "vite",
