--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,17 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
+    "@mantine/core": "^4.2.4",
+    "@mantine/dates": "^4.2.4",
+    "@mantine/dropzone": "^4.2.4",
+    "@mantine/form": "^4.2.4",
+    "@mantine/hooks": "^4.2.4",
+    "@mantine/modals": "^4.2.4",
+    "@mantine/next": "^4.2.4",
+    "@mantine/notifications": "^4.2.4",
+    "@mantine/prism": "^4.2.4",
+    "@mantine/rte": "^4.2.4",
+    "@mantine/spotlight": "^4.2.4",
     "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "@mui/x-data-grid": "^5.4.0",
@@ -29,6 +40,7 @@
     "bootstrap": "^5.1.3",
     "boxicons": "^2.1.1",
     "bulma": "^0.9.3",
+    "dayjs": "^1.11.2",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^2.0.4",
@@ -37,7 +49,7 @@
     "react-loading": "^2.0.3",
     "react-query": "^3.34.16",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.3.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
