--- a/frontend/package.json
+++ b/frontend/package.json
@@ -53,6 +53,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "tabler-icons-react": "^1.48.0",
     "typescript": "^4.5.4",
     "universal-cookie": "^4.0.4",
     "vite": "^2.3.2",
